# amigo

./: .gitignore  .gitmodules  AMIGO_WORKFLOW.md  Cargo.toml  README.md  concat.ps1  operations.md
crates/2d/text/: Cargo.toml  README.md
crates/2d/text/src/: lib.rs
crates/2d/vector/: Cargo.toml  README.md
crates/2d/vector/src/: lib.rs  model.rs  plugin.rs  scene_bridge.rs  service.rs  tests.rs
crates/3d/text/: Cargo.toml  README.md
crates/3d/text/src/: lib.rs
crates/apps/amigo-editor/src-tauri/: Cargo.toml  README.md  tauri.conf.json
crates/apps/amigo-editor/src-tauri/capabilities/: default.json
crates/apps/amigo-editor/src-tauri/src/: commands.rs  dto.rs  lib.rs  main.rs
crates/apps/amigo-editor/src-tauri/src/asset_registry/: dto.rs  graph.rs  mod.rs  scanner.rs
crates/apps/amigo-editor/src-tauri/src/cache/: index.rs  inputs.rs  maintenance.rs  mod.rs  policies.rs  project_id.rs  root.rs
crates/apps/amigo-editor/src-tauri/src/commands/: assets.rs  cache.rs  mod.rs  mods.rs  preview.rs  project_files.rs  (+6 more)
crates/apps/app/: Cargo.toml  README.md
crates/apps/app/src/: app_helpers.rs  bootstrap.rs  diagnostics.rs  event_pipeline.rs  host_runtime.rs  launch_selection.rs  lib.rs  main.rs  particle_presets.rs  render_runtime.rs  runtime_context.rs  scene_preview.rs  scripting_runtime.rs  summary.rs  ui_runtime.rs
crates/apps/app/src/app_model/: display.rs  options.rs  summary.rs
crates/apps/app/src/assets/: mod.rs
crates/apps/app/src/orchestration/: audio_bridge.rs  console_bridge.rs  mod.rs
crates/apps/app/src/render_runtime/: context.rs  extractors.rs  services.rs  tests.rs
crates/apps/app/src/scene_runtime/: context.rs  dispatcher.rs  mod.rs  ui_support.rs
crates/apps/app/src/script_runtime/: mod.rs
crates/apps/app/src/systems/: audio.rs  behavior.rs  camera_follow_2d.rs  collision_events_2d.rs  lifetime.rs  mod.rs  motion_2d.rs  parallax_2d.rs  particles_2d.rs  scene_transition.rs  script_components.rs  script_update.rs  ui_bindings.rs  ui_input.rs
crates/apps/app/src/tests/: bootstrap_tests.rs  hot_reload_tests.rs  interactive_runtime_tests.rs  launch_selection_tests.rs  mod.rs  particles_tests.rs  render_runtime_tests.rs  runtime_summary_tests.rs  scene_loading_tests.rs  ui_runtime_tests.rs
crates/apps/app/src/ui_runtime/: documents.rs  hit_test.rs  nodes.rs  style.rs
crates/apps/app/tests/: headless_cli.rs
crates/apps/launcher/: Cargo.toml  README.md
crates/apps/launcher/src/: config.rs  diagnostics.rs  main.rs  tui.rs
crates/apps/launcher/src/tui/: details.rs  discovery.rs  filtering.rs  profiles.rs  render.rs  runtime.rs  state.rs  tests.rs
crates/apps/launcher/tests/: headless_cli.rs
crates/apps/object-browser/: Cargo.toml  README.md
crates/apps/object-browser/src/: layout.rs  main.rs
crates/audio/mixer/: Cargo.toml  README.md
crates/audio/mixer/src/: lib.rs  tests.rs
crates/audio/output/: Cargo.toml  README.md
crates/audio/output/src/: lib.rs  tests.rs
crates/audio/output/src/output/: plugin.rs  worker.rs
crates/engine/event-pipeline/: Cargo.toml  README.md
crates/engine/event-pipeline/src/: lib.rs
crates/engine/render-wgpu/: Cargo.toml  README.md
crates/engine/render-wgpu/src/: lib.rs  renderer.rs  ui_overlay.rs
crates/engine/render-wgpu/src/backend/: helpers.rs  mod.rs  surface.rs  types.rs
crates/engine/render-wgpu/src/renderer/: assets.rs  buffers.rs  glyphs.rs  math.rs  particles.rs  pipelines.rs  scene.rs  service.rs  tests.rs  text.rs  world_2d.rs  world_3d.rs
crates/engine/render-wgpu/src/ui_overlay/: helpers.rs  layout.rs  model.rs  primitives.rs  tests.rs  widgets.rs
crates/engine/scene/: Cargo.toml  README.md
crates/engine/scene/src/: command_format.rs  commands.rs  document.rs  domain_services.rs  entity.rs  error.rs  hydration.rs  lib.rs  motion_commands.rs  particle_commands.rs  plugin.rs  render_commands.rs  service_activation.rs  service_hydration.rs  service_queues.rs  services.rs  tests.rs  transition.rs  ui_audio_commands.rs
crates/engine/scene/src/document/: behavior.rs  components.rs  core.rs  defaults.rs  loader.rs  mod.rs  particles.rs  render_values.rs  tests.rs  ui.rs
crates/engine/scene/src/hydration/: common.rs  events.rs  mod.rs  particles.rs  plan.rs  style.rs  ui.rs
crates/engine/scene/src/render_commands/: motion_2d.rs  physics_2d.rs  render_2d.rs  render_3d.rs
crates/engine/scene/src/tests/: domain_services.rs  hydrated_state.rs  motion.rs  pools_lifetime.rs  queues.rs  scene_service.rs
crates/platform/app-host-winit/: Cargo.toml  README.md
crates/platform/app-host-winit/src/: lib.rs
crates/platform/file-watch-notify/: Cargo.toml  README.md
crates/platform/file-watch-notify/src/: lib.rs  tests.rs
crates/platform/window-winit/: Cargo.toml  README.md
crates/platform/window-winit/src/: lib.rs
crates/scripting/rhai/: Cargo.toml  README.md
crates/scripting/rhai/src/: lib.rs  package.rs
crates/scripting/rhai/src/bindings/: actions.rs  arcade.rs  assets.rs  audio.rs  commands.rs  common.rs  debug.rs  entities.rs  input.rs  material3d.rs  mesh3d.rs  mod.rs  mod_api.rs  motion.rs  particles.rs  physics.rs  platformer.rs  pools.rs  projectiles.rs  runtime.rs  scene.rs  session.rs  sprite2d.rs  state.rs  text2d.rs  text3d.rs  time.rs  timers.rs  trace.rs  ui.rs  vector2d.rs  world_root.rs
crates/scripting/rhai/src/handles/: asset_ref.rs  entity_ref.rs  mod.rs
crates/scripting/rhai/src/runtime/: plugin.rs  script_runtime.rs
crates/scripting/rhai/src/tests/: component_lifecycle_tests.rs  import_resolver_tests.rs  lifecycle_source_tests.rs  mod.rs  package_tests.rs  world_api_lifecycle.rs  world_api_motion.rs  world_api_queries.rs
crates/ui/core/: Cargo.toml  README.md
crates/ui/core/src/: input.rs  layout.rs  lib.rs  model.rs  plugin.rs  scene_bridge.rs  service.rs
crates/ui/core/src/layout/: flow.rs  measure.rs  service.rs  tests.rs
crates/ui/core/src/model/: curve.rs  document.rs  events.rs  node.rs  style.rs  theme.rs
crates/ui/core/src/service/: bindings.rs  model_bindings.rs  plugin.rs  scene.rs  state.rs  tests.rs  theme.rs
(+835 files in other folders)
