[package]
name = "amigo-2d-text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
amigo-assets.workspace = true
amigo-core.workspace = true
amigo-math.workspace = true
amigo-render-api.workspace = true
amigo-capabilities.workspace = true
amigo-runtime.workspace = true
amigo-scene.workspace = true
