[package]
name = "amigo-2d-vector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
amigo-core.workspace = true
amigo-math.workspace = true
amigo-runtime.workspace = true
amigo-capabilities.workspace = true
amigo-scene.workspace = true
