[package]
name = "amigo-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
amigo-2d-sprite.workspace = true
amigo-2d-text.workspace = true
amigo-3d-material.workspace = true
amigo-3d-mesh.workspace = true
amigo-3d-text.workspace = true
amigo-app-host-api.workspace = true
amigo-app-host-winit.workspace = true
amigo-assets.workspace = true
amigo-core.workspace = true
amigo-file-watch-api.workspace = true
amigo-file-watch-notify.workspace = true
amigo-hot-reload.workspace = true
amigo-input-api.workspace = true
amigo-input-winit.workspace = true
amigo-math.workspace = true
amigo-modding.workspace = true
amigo-render-api.workspace = true
amigo-render-wgpu.workspace = true
amigo-runtime.workspace = true
amigo-scene.workspace = true
amigo-scripting-api.workspace = true
amigo-scripting-rhai.workspace = true
amigo-ui.workspace = true
amigo-window-api.workspace = true
amigo-window-winit.workspace = true
