[package]
name = "amigo-launcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
amigo-app.workspace = true
amigo-core.workspace = true
amigo-modding.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
toml.workspace = true
