[package]
name = "amigo-object-browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["egui-ui"]
egui-ui = []
taffy-layout = ["dep:taffy"]

[dependencies]
amigo-tool-scene-preview = { path = "../../tools/scene-preview" }
eframe.workspace = true
egui.workspace = true
serde.workspace = true
taffy = { workspace = true, optional = true }
toml.workspace = true
