[package]
name = "amigo-audio-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
amigo-audio-mixer.workspace = true
amigo-core.workspace = true
amigo-runtime.workspace = true
cpal.workspace = true
