[package]
name = "amigo-event-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "amigo_event_pipeline"
path = "src/lib.rs"

[dependencies]
amigo-core = { workspace = true }
amigo-runtime = { workspace = true }
