[package]
name = "amigo-scene"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
amigo-assets.workspace = true
amigo-core.workspace = true
amigo-fx.workspace = true
amigo-math.workspace = true
amigo-runtime.workspace = true
serde.workspace = true
serde_yaml.workspace = true
