[package]
name = "amigo-file-watch-notify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
amigo-core.workspace = true
amigo-file-watch-api.workspace = true
amigo-runtime.workspace = true
notify.workspace = true
