[package]
name = "amigo-window-winit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
amigo-core.workspace = true
amigo-runtime.workspace = true
amigo-window-api.workspace = true
winit.workspace = true
