[package]
name = "amigo-scripting-rhai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
amigo-2d-platformer.workspace = true
amigo-2d-sprite.workspace = true
amigo-assets.workspace = true
amigo-core.workspace = true
amigo-input-api.workspace = true
amigo-math.workspace = true
amigo-modding.workspace = true
amigo-runtime.workspace = true
amigo-scene.workspace = true
amigo-scripting-api.workspace = true
rhai.workspace = true
