[package]
name = "amigo-ui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Amigo Engine Team"]
publish = false

[dependencies]
amigo-assets = { path = "../../engine/assets" }
amigo-core = { path = "../../foundation/core" }
amigo-math = { path = "../../foundation/math" }
amigo-runtime = { path = "../../engine/runtime" }
amigo-scene = { path = "../../engine/scene" }
