[package]
name = "amigo-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "amigo_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
amigo-app = { workspace = true }
amigo-modding = { path = "../../../engine/modding" }
amigo-scene = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = "1"
serde_yaml = { workspace = true }
tauri = { version = "2", features = ["protocol-asset"] }
rfd = "0.15"
